--- a/wercker.yml
+++ b/wercker.yml
@@ -2,40 +2,23 @@
 
 box:
    id: golang
+   no-response-timeout: 20
 
 build:
 
   box:
-    id: quay.io/ravi_r_singhal/weblogic-with-root
+    id: quay.io/ravi_r_singhal/weblogic
     username: $QUAY_IO_USERNAME
     password: $QUAY_IO_PASSWORD
-    tag: 12.2.1.2
+    tag: licenseplates-prod
+    entrypoint: "/bin/sh -c /bin/bash"
 
   steps:
     - script:
-       name: "Create and Copy Application war" 
+       name: "Rebuild and copy application war to latest image deployed in production (with tag licenseplates-prod)" 
        code: | 
-         echo "Install Maven"
-         yum install -y wget
-         wget http://repos.fedorapeople.org/repos/dchen/apache-maven/epel-apache-maven.repo -O /etc/yum.repos.d/epel-apache-maven.repo
-         sed -i s/\$releasever/6/g /etc/yum.repos.d/epel-apache-maven.repo
-         yum install -y apache-maven
          mvn clean install
          cp target/licenseplates.war /u01/oracle/.
-         yum -y install dos2unix nc
-    - markxnelson/weblogic-step@0.1.24:
-        name: "Setup weblogic domain" 
-        config: weblogic-config.json
-    - script:
-        name: "Copy the DDL and entrypoint scripts into place"
-        code: |
-          cp $WERCKER_SOURCE_DIR/create-users.sql /u01/oracle/create-users.sql
-          cp $WERCKER_SOURCE_DIR/create-schema.sql /u01/oracle/create-schema.sql
-          cp $WERCKER_SOURCE_DIR/entrypoint.sh /u01/oracle/entrypoint.sh
-          chmod 777  /u01/oracle/entrypoint.sh
-          chmod 777  /u01/oracle/*.sql
-          dos2unix /u01/oracle/entrypoint.sh
-          ls -lahrt /u01/oracle
     - internal/docker-push:
         name: "Push the updated container as staged image(licenseplates-stage)"
         username: $QUAY_IO_USERNAME
@@ -48,14 +31,7 @@ build:
         
 test:
 
-  steps:
-    - kubectl:
-       name: "Delete any existing secrets for quay and docker store registries in TEST environment"
-       server: $KUBERNETES_MASTER_TEST
-       username: $KUBERNETES_USERNAME_TEST
-       password: $KUBERNETES_PASSWORD_TEST
-       insecure-skip-tls-verify: true
-       command: delete --ignore-not-found=true secret quaysecret storesecret          
+  steps:          
     - kubectl:
        name: "Delete any existing weblogic and database deployments in TEST  environment"
        server: $KUBERNETES_MASTER_TEST
@@ -63,45 +39,17 @@ test:
        password: $KUBERNETES_PASSWORD_TEST
        insecure-skip-tls-verify: true
        command: delete --ignore-not-found=true -f database-deployment.yaml -f weblogic-deployment.yaml
-    - kubectl:
-       name: "Delete any existing weblogic load-balancer in TEST environment"
-       server: $KUBERNETES_MASTER_TEST
-       username: $KUBERNETES_USERNAME_TEST
-       password: $KUBERNETES_PASSWORD_TEST
-       insecure-skip-tls-verify: true
-       command: delete --ignore-not-found=true svc weblogic-load-balancer
     - script:
        name: "Wait for some time for clean up"
        code: |
-         sleep 30
+         sleep 30     
     - kubectl:
-       name: "Create secret for quay registry in TEST environment"
-       server: $KUBERNETES_MASTER_TEST
-       username: $KUBERNETES_USERNAME_TEST
-       password: $KUBERNETES_PASSWORD_TEST
-       insecure-skip-tls-verify: true
-       command: create secret docker-registry quaysecret --docker-server=quay.io --docker-username=$QUAY_IO_USERNAME --docker-password=$QUAY_IO_PASSWORD --docker-email=$QUAY_IO_EMAIL
-    - kubectl:
-       name: "Create secret for docker store registry in TEST environment"
-       server: $KUBERNETES_MASTER_TEST
-       username: $KUBERNETES_USERNAME_TEST
-       password: $KUBERNETES_PASSWORD_TEST
-       insecure-skip-tls-verify: true
-       command: create secret docker-registry storesecret --docker-username=$DOCKER_STORE_USER --docker-password=$DOCKER_STORE_PASSWORD --docker-email=$DOCKER_STORE_EMAIL     
-    - kubectl:
-       name: "Create weblogic and database deployments in TEST  environment"
+       name: "Create weblogic and database deployments in TEST environment"
        server: $KUBERNETES_MASTER_TEST
        username: $KUBERNETES_USERNAME_TEST
        password: $KUBERNETES_PASSWORD_TEST
        insecure-skip-tls-verify: true
        command: create -f database-deployment.yaml -f weblogic-deployment.yaml
-    - kubectl:
-       name: "Create load-balancer for weblogic in TEST  environment"
-       server: $KUBERNETES_MASTER_TEST
-       username: $KUBERNETES_USERNAME_TEST
-       password: $KUBERNETES_PASSWORD_TEST
-       insecure-skip-tls-verify: true
-       command: expose deployment weblogic --type=LoadBalancer --name=weblogic-load-balancer --external-ip=$WEBLOGIC_HOST_TEST --load-balancer-ip=$WEBLOGIC_HOST_TEST
     - script:
        name: "Wait for application to be available"
        code: |
@@ -119,64 +67,25 @@ deploy:
 
   steps:          
     - blendle/publish-quay-tag:
-        name: "Tag staged and tested image (licenseplates-stage) to prod tag(licenseplates-prod)"
+        name: "Tag staged image(licenseplates-stage) with git commit id ${WERCKER_GIT_COMMIT}"
         token: $QUAY_IO_TOKEN
         repository: ravi_r_singhal/weblogic
         current: licenseplates-stage
-        tag: licenseplates-prod
+        tag: ${WERCKER_GIT_COMMIT}    
     - kubectl:
-       name: "Delete any existing secrets for quay and docker store registries in PROD environment"
+       name: "Change tag of image in PROD deployment to ${WERCKER_GIT_COMMIT} to initiate rolling update"
        server: $KUBERNETES_MASTER_PROD
        username: $KUBERNETES_USERNAME_PROD
        password: $KUBERNETES_PASSWORD_PROD
        insecure-skip-tls-verify: true
-       command: delete --ignore-not-found=true secret quaysecret storesecret    
+       command: set image deployment/weblogic weblogic=quay.io/ravi_r_singhal/weblogic:${WERCKER_GIT_COMMIT}
     - kubectl:
-       name: "Delete any existing weblogic and database deployments in PROD environment"
+       name: "Wait for rollout to complete in Production"
        server: $KUBERNETES_MASTER_PROD
        username: $KUBERNETES_USERNAME_PROD
        password: $KUBERNETES_PASSWORD_PROD
        insecure-skip-tls-verify: true
-       command: delete --ignore-not-found=true -f database-deployment.yaml -f weblogic-deployment-prod.yaml
-    - kubectl:
-       name: "Delete any existing weblogic load-balancer in PROD environment"
-       server: $KUBERNETES_MASTER_PROD
-       username: $KUBERNETES_USERNAME_PROD
-       password: $KUBERNETES_PASSWORD_PROD
-       insecure-skip-tls-verify: true
-       command: delete --ignore-not-found=true svc weblogic-load-balancer
-    - script:
-       name: "Sleep for some time for clean up"
-       code: |
-         sleep 30
-    - kubectl:
-       name: "Create secret for quay registry in PROD environment"
-       server: $KUBERNETES_MASTER_PROD
-       username: $KUBERNETES_USERNAME_PROD
-       password: $KUBERNETES_PASSWORD_PROD
-       insecure-skip-tls-verify: true
-       command: create secret docker-registry quaysecret --docker-server=quay.io --docker-username=$QUAY_IO_USERNAME --docker-password=$QUAY_IO_PASSWORD --docker-email=$QUAY_IO_EMAIL
-    - kubectl:
-       name: "Create secret for docker store registry in PROD environment"
-       server: $KUBERNETES_MASTER_PROD
-       username: $KUBERNETES_USERNAME_PROD
-       password: $KUBERNETES_PASSWORD_PROD
-       insecure-skip-tls-verify: true
-       command: create secret docker-registry storesecret --docker-username=$DOCKER_STORE_USER --docker-password=$DOCKER_STORE_PASSWORD --docker-email=$DOCKER_STORE_EMAIL     
-    - kubectl:
-       name: "Create weblogic and database deployments in PROD environment"
-       server: $KUBERNETES_MASTER_PROD
-       username: $KUBERNETES_USERNAME_PROD
-       password: $KUBERNETES_PASSWORD_PROD
-       insecure-skip-tls-verify: true
-       command: create -f database-deployment.yaml -f weblogic-deployment-prod.yaml
-    - kubectl:
-       name: "Create load-balancer for weblogic in PROD environment"
-       server: $KUBERNETES_MASTER_PROD
-       username: $KUBERNETES_USERNAME_PROD
-       password: $KUBERNETES_PASSWORD_PROD
-       insecure-skip-tls-verify: true
-       command: expose deployment weblogic --type=LoadBalancer --name=weblogic-load-balancer --external-ip=$WEBLOGIC_HOST_PROD --load-balancer-ip=$WEBLOGIC_HOST_PROD
+       command: rollout status deployment/weblogic
     - script:
        name: "Sanity Check Production"
        code: |
@@ -186,3 +95,16 @@ deploy:
            printf '.'
            sleep 5
          done
+    - blendle/publish-quay-tag:
+        name: "Tag last deployed image (with tag licenseplates-prod) to licenseplates-prod-last"
+        token: $QUAY_IO_TOKEN
+        repository: ravi_r_singhal/weblogic
+        current: licenseplates-prod
+        tag: licenseplates-prod-last     
+    - blendle/publish-quay-tag:
+        name: "Tag currently deployed image with git commit id ${WERCKER_GIT_COMMIT} to tag licenseplates-prod"
+        name: "Tag deployed image with tag as licenseplates"
+        token: $QUAY_IO_TOKEN
+        repository: ravi_r_singhal/weblogic
+        current: ${WERCKER_GIT_COMMIT}
+        tag: licenseplates-prod         
