try command timeout

--- a/wercker.yml
+++ b/wercker.yml
@@ -2,7 +2,7 @@
 
 box:
    id: golang
-
+   command-timeout: 30
 build:
 
   box:
@@ -64,7 +64,6 @@ test:
          go run main.go
 deploy:
 
-  no-response-timeout: 20
   steps:          
     - blendle/publish-quay-tag:
         name: "Tag staged image(licenseplates-stage) with git commit id ${WERCKER_GIT_COMMIT}"
